--- a/pages/Vinilos.html
+++ b/pages/Vinilos.html
@@ -8,6 +8,9 @@
     </title>
     <link rel="shortcut icon"
     href="../Multimedia/13510.png">
+    <link rel="stylesheet" 
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../Estilos/Estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +30,7 @@
         </nav>
     </header>
     <div class="listado de productos2">
-        <h2>Nuestros productos</h2>
+        <h1>Nuestros productos</h1>
         <article class="ContenedorProductos2">
         <section class="FotosProductos2">
         <img src="../Multimedia/vinilo.jpg" alt="img1" width="300" height="300">
