--- a/pages/login.html
+++ b/pages/login.html
@@ -8,6 +8,9 @@
     </title>
     <link rel="shortcut icon"
     href="../Multimedia/13510.png">
+    <link rel="stylesheet" 
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../Estilos/Estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,13 +31,30 @@
     </header>   
     <main id="caja">
         <h1>Registrarse</h1>
-        <form action="enviar.php" method="post"
-        enctype="application/x-www-form-urlencoded">
-    Nombre completo<input type="text" required> <br>
-    Email<input type="email" required> <br>
-    Contraseña<input type="password" required> <br>
-    <input type="submit" value="continuar">
-    </form>
+        <div class="container">
+        <form action="">
+            <div class="form-group">
+                <label for="email">Email
+                </label>
+                <input type="email"
+                class="form-control"
+                id="email"
+                placeholder="Ingrese email"
+                name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Contraseña
+                </label>
+                <input type="password"
+                class="form-control"
+                id="password"
+                placeholder="ingrese contraseña"
+                name="email" required>
+            </div>
+            <button type="submit" class="btn btn-succes">
+                Ingresar
+            </button>
+        </form>    
     </main>
 </body>
 <footer>
