--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
         </nav>
     </header>
     <hr>
-    <div class="cabecera">
 <section class="banner">
-        <img src="Multimedia/bannerdarkside.jpg" class="Darksideimg" width="1500vw" height="300wh">
+        <img src="Multimedia/bannerdarkside.jpg" class="Darksideimg">
     </section>
-</div>
     </main>
 <div class="ListadoProductos">
     <h2>Nuestros productos</h2>
