--- a/pages/Ayuda.html
+++ b/pages/Ayuda.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon"
     href="../Multimedia/13510.png">
     <link rel="stylesheet" href="../Estilos/Estilos.css">
+    <link rel="stylesheet" href="../Estilos/estilos.scss"
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
