--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -8,6 +8,9 @@
     </title>
     <link rel="shortcut icon"
     href="../Multimedia/13510.png">
+    <link rel="stylesheet" 
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../Estilos/Estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,6 +29,12 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="btn--red1">red 1</div>
+        <div class="btn--red2">red 2</div>
+        <div class="btn--red3">red 3</div>
+        <div class="cajados">cajados</div>
+    </main>
 </body>
     <footer>
         <ul>
