--- a/pages/Ayuda.html
+++ b/pages/Ayuda.html
@@ -8,8 +8,10 @@
     </title>
     <link rel="shortcut icon"
     href="../Multimedia/13510.png">
+    <link rel="stylesheet" 
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../Estilos/Estilos.css">
-    <link rel="stylesheet" href="../Estilos/estilos.scss"
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
