--- a/pages/login.html
+++ b/pages/login.html
@@ -15,19 +15,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+<script src="https://kit.fontawesome.com/1a66ded115.js" crossorigin="anonymous"></script>
 </head>
-<h1>Vinyl House</h1>
 <body>
     <header>
-        <nav>
-            <ul>    
+        <nav class="menu">
+            <label class="logo">VINYL HOUSE</label>   
+            <ul class="menu_items"  id="otroModo">    
             <li><a href="../index.html">INICIO</a></li>
             <li><a href="carrito.html">CARRITO</a></li>
-            <li>LOGIN</li>
+            <li class="active"><a href="#">LOGIN</a></li>
             <li><a href="Vinilos.html">VINILOS</a></li>
             <li><a href="Ayuda.html">AYUDA</a></li>
             </ul>
         </nav>
+        <span class="btn_menu" onclick="showmenu()">
+            <i class="fa fa-bars"></i>
+        </span>
+
     </header>   
     <main id="caja">
         <h1>Registrarse</h1>
@@ -57,11 +64,40 @@
         </form>    
     </main>
 </body>
-<footer>
-<ul>
-    <li>Instagram</li>
-    <li>whatsapp</li>
-    <li>Facebook</li>
-</ul>
-</footer>
+    <div class="footer-dark">
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-3 item">
+                    <p>Services</p>
+                    <ul>
+                        <li><a href="#">Web design</a></li>
+                        <li><a href="#">Development</a></li>
+                        <li><a href="#">Hosting</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-md-3 item">
+                    <p>About</p>
+                    <ul>
+                        <li><a href="#">Company</a></li>
+                        <li><a href="#">Team</a></li>
+                        <li><a href="#">Careers</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 item text">
+                    <p>Vinyl house</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et praesentium expedita earum cum dolores dolorem ipsum neque cumque dolor quasi cupiditate exercitationem autem esse, labore quisquam voluptate eos fuga veniam.</p>
+                </div>
+                <div class="col item social"><a href="https://www.Facebook.com/">
+                    <i class="icon ion-social-facebook"></i></a><a href="https://twitter.com/home">
+                        <i class="icon ion-social-twitter"></i></a><a href=#>
+                            <i class="icon ion-social-snapchat"></i></a><a href="https://instagram.com">
+                                <i class="icon ion-social-instagram"></i></a href="https://instagram.com/home"></div>
+            </div>
+            <p class="copyright">Vinyl house © 2022</p>
+        </div>
+    </footer>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 </html>
