--- a/pages/Vinilos.html
+++ b/pages/Vinilos.html
@@ -21,9 +21,14 @@
 </head>
 <body>
     <header>
-        <nav class="menu">
-            <label class="logo">VINYL HOUSE</label>   
-            <ul class="menu_items"  id="otroModo">    
+    <nav class="menu">
+        <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
+        <label class="logo">VINYL HOUSE</label>
+        <ul>       
             <li><a href="../index.html">INICIO</a></li>
             <li><a href="carrito.html">CARRITO</a></li>
             <li><a href="login.html">LOGIN</a></li>
@@ -31,10 +36,6 @@
             <li><a href="Ayuda.html">AYUDA</a></li>
             </ul>
         </nav>
-        <span class="btn_menu" onclick="showmenu()">
-            <i class="fa fa-bars"></i>
-        </span>
-
     </header>
     <div class="ListadoProductos">
         <h1>Nuestros productos</h1>
@@ -60,19 +61,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-md-3 item">
-                    <p>Services</p>
+                    <p>Servicios</p>
                     <ul>
-                        <li><a href="#">Web design</a></li>
-                        <li><a href="#">Development</a></li>
-                        <li><a href="#">Hosting</a></li>
+                        <li><a href="#">Ventas </a></li><br>
+                        <li><a href="#">  Consultas  </a></li><br>
+                        <li><a href="#">Nosotros</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-6 col-md-3 item">
-                    <p>About</p>
+                    <p>Formas de pago</p>
                     <ul>
-                        <li><a href="#">Company</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Company</a></li><br>
+                        <li><a href="#">Team</a></li><br>
+                        <li><a href="#">Careers</a></li><br>
                     </ul>
                 </div>
                 <div class="col-md-6 item text">
