--- a/pages/login.html
+++ b/pages/login.html
@@ -22,8 +22,13 @@
 <body>
     <header>
         <nav class="menu">
-            <label class="logo">VINYL HOUSE</label>   
-            <ul class="menu_items"  id="otroModo">    
+            <nav>
+                <input type="checkbox" id="check">
+                <label for="check" class="checkbtn">
+                    <i class="fas fa-bars"></i>
+                </label>
+            <label class="logo">VINYL HOUSE</label>
+            <ul>   
             <li><a href="../index.html">INICIO</a></li>
             <li><a href="carrito.html">CARRITO</a></li>
             <li class="active"><a href="#">LOGIN</a></li>
@@ -31,14 +36,11 @@
             <li><a href="Ayuda.html">AYUDA</a></li>
             </ul>
         </nav>
-        <span class="btn_menu" onclick="showmenu()">
-            <i class="fa fa-bars"></i>
-        </span>
-
-    </header>   
+    </header>
+    <section class="caja__login">
     <main id="caja">
         <h1>Registrarse</h1>
-        <div class="container">
+        <div class="container__caja">
         <form action="">
             <div class="form-group">
                 <label for="email">Email
@@ -63,25 +65,26 @@
             </button>
         </form>    
     </main>
+</section>   
 </body>
-    <div class="footer-dark">
+<div class="footer-dark">
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-md-3 item">
-                    <p>Services</p>
+                    <p>Servicios</p>
                     <ul>
-                        <li><a href="#">Web design</a></li>
-                        <li><a href="#">Development</a></li>
-                        <li><a href="#">Hosting</a></li>
+                        <li><a href="#">Ventas </a></li><br>
+                        <li><a href="#">  Consultas  </a></li><br>
+                        <li><a href="#">Nosotros</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-6 col-md-3 item">
-                    <p>About</p>
+                    <p>Formas de pago</p>
                     <ul>
-                        <li><a href="#">Company</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Company</a></li><br>
+                        <li><a href="#">Team</a></li><br>
+                        <li><a href="#">Careers</a></li><br>
                     </ul>
                 </div>
                 <div class="col-md-6 item text">
