--- a/pages/Vinilos.html
+++ b/pages/Vinilos.html
@@ -21,40 +21,132 @@
 </head>
 <body>
     <header>
-    <nav class="menu">
-        <nav>
+        <nav class="menu">
+            <nav>
             <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
+                <label for="check" class="checkbtn">
                 <i class="fas fa-bars"></i>
-            </label>
-        <label class="logo">VINYL HOUSE</label>
-        <ul>       
+                </label>
+            <label class="logo">VINYL HOUSE</label>
+            <ul>       
             <li><a href="../index.html">INICIO</a></li>
             <li><a href="carrito.html">CARRITO</a></li>
             <li><a href="login.html">LOGIN</a></li>
             <li class="active"><a href="#">VINILOS</a></li>
             <li><a href="Ayuda.html">AYUDA</a></li>
             </ul>
+            </nav>
         </nav>
     </header>
     <div class="ListadoProductos">
-        <h1>Nuestros productos</h1>
+        <h1 class="titulo__roto">Nuestros productos</h1>
+        <h1><b>Nuestros Productos</b></h1>
         <article class="ContenedorProductos">
-        <section class="FotosProductos">
-            <img src="../Multimedia/Clash.jpg" alt="img1">
-            <img src="../Multimedia/Crimson.jpg" alt="img2">
-            <img src="../Multimedia/Cure.jpg" alt="img3">
-            <img src="../Multimedia/Wall.jpg" alt="img4">
-            <img src="../Multimedia/Moon.jpg" alt="img5">
-            <img src="../Multimedia/Order.jpg" alt="img6">
-            <img src="../Multimedia/Pepper.jpg" alt="img7">
-            <img src="../Multimedia/Strokes.jpg" alt="img8">
-            <img src="../Multimedia/Sumo.jpg" alt="img9">
-            <img src="../Multimedia/Wall.jpg" alt="img10">
-
-        </article>
-    </div>
-    
+            <section class="FotosProductos">
+                <div class="contenedor__fotos">
+                    <figure>
+                        <img src="../Multimedia/Clash.jpg" alt="img1">
+                            <div class="capa">
+                                <h3>The Clash</h3>
+                                <h4>London Calling</h4>
+                                <p class="texto__imagenes">London Calling es el tercer álbum de estudio de la banda británica de punk The Clash, lanzado el 14 de diciembre de 1979, por CBS Records en el Reino Unido y en enero de 1980 por Epic Records en Estados Unidos.</p>
+                            </div>
+                    </figure>
+                </div>
+                <div class="contenedor__fotos">
+                    <figure>
+                        <img src="../Multimedia/Crimson.jpg" alt="img2">
+                        <div class="capa">
+                            <h3>King Crimson</h3>
+                            <h4>ITCOTCK</h4>
+                            <p class="texto__imagenes">In the Court of the Crimson King es el álbum debut del grupo inglés King Crimson, ​ producido y publicado en 1969, considerado uno de los primeros álbumes de rock progresivo.​​​El álbum se destaca por la combinación de las letras y la instrumentación.</p>
+                        </div>
+                    </figure>
+                </div>
+                <div class="contenedor__fotos">
+                    <figure>
+                        <img src="../Multimedia/Cure.jpg" alt="img3">
+                        <div class="capa">
+                            <h3>The Cure</h3>
+                            <h4>Kiss Me, Kiss Me, Kiss Me</h4>
+                            <p class="texto__imagenes">Kiss Me, Kiss Me, Kiss Me es el séptimo álbum de estudio de la banda inglesa de rock alternativo, The Cure liderada por Robert Smith. Fue producido por Dave Allen y por el mismo Smith, y lanzado al mercado el 5 de mayo de 1987 inicialmente en formato de disco doble vinilo.</p>
+                        </div>
+                    </figure>
+                </div>
+                <div class="contenedor__fotos">
+                    <figure>
+                        <img src="../Multimedia/Sumo.jpg" alt="img4">
+                        <div class="capa">
+                            <h3>Sumo</h3>
+                            <h4>After Chabón</h4>
+                            <p class="texto__imagenes">After Chabón es el tercer y último disco de la banda argentina de rock Sumo. Fue editado en 1987. Para Luca Prodan este fue el mejor disco de la banda ya que no contiene ningún hit único. La idea de tapa fue de Roberto Pettinato</p>
+                        </div>
+                    </figure>
+                </div>
+                <div class="contenedor__fotos">
+                    <figure>
+                        <img src="../Multimedia/Joydi.jpg" alt="img5">
+                        <div class="capa">
+                            <h3>Joy Division</h3>
+                            <h4>Unkown Pleasures</h4>
+                            <p class="texto__imagenes">Unknown Pleasures es el primer álbum de estudio de la banda británica Joy Division, publicado en junio de 1979. La imagen de la portada muestra 80 pulsos sucesivos del primer púlsar descubierto.</p>
+                        </div>
+                    </figure>
+                </div>
+                <div class="contenedor__fotos">
+                    <figure>
+                        <img src="../Multimedia/Moon.jpg" alt="img6">
+                        <div class="capa">
+                            <h3>Pink Floyd</h3>
+                            <h4>The Dark Side of the Moon</h4>
+                            <p class="texto__imagenes">The Dark Side of the Moon es un álbum conceptual, el octavo de estudio de la banda británica de rock progresivo Pink Floyd. Fue lanzado el 1 de marzo de 1973 en los Estados Unidos y el 24 de marzo del mismo año en el Reino Unido.</p>
+                        </div>
+                    </figure>
+                </div>
+                <div class="contenedor__fotos">
+                    <figure>
+                        <img src="../Multimedia/Order.jpg" alt="img7">
+                        <div class="capa">
+                            <h3>New Order</h3>
+                            <h4>Power, Corruption & Lies</h4>
+                            <p class="texto__imagenes">Power, Corruption & Lies es el segundo álbum de estudio de la banda New Order. Fue publicado el 2 de mayo de 1983. El álbum cuenta con más pistas basadas en sonidos electrónicos que su anterior álbum Movement, con un mayor uso de los sintetizadores</p>
+                        </div>
+                    </figure>
+                </div>
+                <div class="contenedor__fotos">
+                    <figure>
+                        <img src="../Multimedia/Pepper.jpg" alt="img8">
+                        <div class="capa">
+                            <h3>The Beatles</h3>
+                            <h4>Sgt. Pepper's Lonely Hearts Club Band</h4>
+                            <p class="texto__imagenes">Sgt. Pepper's Lonely Hearts Club Band es el octavo álbum de estudio de la banda Inglesa The Beatles. Fue publicado el 26 de mayo de 1967. Alabado por los criticos debido a su innovación en la creacion de letras, produccion y diseño grafico.</p>
+                        </div>
+                    </figure>
+                </div>
+                <div class="contenedor__fotos">
+                    <figure>
+                        <img src="../Multimedia/Strokes.jpg" alt="img9">
+                        <div class="capa">
+                            <h3>The Strokes</h3>
+                            <h4>Is This It?</h4>
+                            <p class="texto__imagenes">Is This It es el álbum debut de la banda de rock estadounidense The Strokes. Grabado en el estudio Transporterraum de Nueva York con el productor Gordon Raphael, el álbum se publicó por primera vez el 30 de julio de 2001 en Australia, con RCA Records como compañía discográfica.</p>
+                        </div>
+                    </figure>
+                </div>
+                <div class="contenedor__fotos">
+                    <figure>
+                        <img src="../Multimedia/Wall.jpg" alt="img10">
+                        <div class="capa">
+                            <h3>Pink Floyd</h3>
+                            <h4>The Wall</h4>
+                            <p class="texto__imagenes">The Wall es el undécimo álbum de estudio de la banda británica de rock progresivo Pink Floyd y el segundo doble, publicado en 1979. Se grabó entre abril y noviembre bajo la dirección del productor Bob Ezrin y de los miembros de Pink Floyd David Gilmour y Roger Waters.</p>
+                        </div>
+                    </figure>
+                </div>
+            </section>
+        
+            </article>
+    </div>  
 </body>
 <div class="footer-dark">
     <footer>
