--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <section class="FotosProductos">
             <div class="contenedor__fotos">
                 <figure>
-                <img src="../Multimedia/Clash.jpg" alt="img1">
+                <img src="/Multimedia/Clash.jpg" alt="img1">
                     <div class="capa">
                         <h3>The Clash</h3>
                         <h4>London Calling</h4>
@@ -78,7 +78,7 @@
             </div>
             <div class="contenedor__fotos">
             <figure>
-                <img src="../Multimedia/Crimson.jpg" alt="img2">
+                <img src="/Multimedia/Crimson.jpg" alt="img2">
                 <div class="capa">
                     <h3>King Crimson</h3>
                     <h4>ITCOTCK</h4>
@@ -88,7 +88,7 @@
             </div>
             <div class="contenedor__fotos">
             <figure>
-                <img src="../Multimedia/Cure.jpg" alt="img3">
+                <img src="/Multimedia/Cure.jpg" alt="img3">
                 <div class="capa">
                     <h3>The Cure</h3>
                     <h4>Kiss Me, Kiss Me, Kiss Me</h4>
@@ -98,7 +98,7 @@
             </div>
             <div class="contenedor__fotos">
             <figure>
-                <img src="../Multimedia/Sumo.jpg" alt="img4">
+                <img src="/Multimedia/Sumo.jpg" alt="img4">
                 <div class="capa">
                     <h3>Sumo</h3>
                     <h4>After Chabón</h4>
@@ -108,7 +108,7 @@
             </div>
             <div class="contenedor__fotos">
             <figure>
-                <img src="../Multimedia/Joydi.jpg" alt="img5">
+                <img src="/Multimedia/Joydi.jpg" alt="img5">
                 <div class="capa">
                     <h3>Joy Division</h3>
                     <h4>Unkown Pleasures</h4>
@@ -125,7 +125,7 @@
         <section class="FotosProductos">
             <div class="contenedor__fotos">
             <figure>
-                <img src="../Multimedia/Moon.jpg" alt="img6">
+                <img src="/Multimedia/Moon.jpg" alt="img6">
                 <div class="capa">
                     <h3>Pink Floyd</h3>
                     <h4>The Dark Side of the Moon</h4>
@@ -135,7 +135,7 @@
         </div>
             <div class="contenedor__fotos">
             <figure>
-                <img src="../Multimedia/Order.jpg" alt="img7">
+                <img src="/Multimedia/Order.jpg" alt="img7">
                 <div class="capa">
                     <h3>New Order</h3>
                     <h4>Power, Corruption & Lies</h4>
@@ -145,7 +145,7 @@
         </div>
         <div class="contenedor__fotos">
             <figure>
-                <img src="../Multimedia/Pepper.jpg" alt="img8">
+                <img src="/Multimedia/Pepper.jpg" alt="img8">
                 <div class="capa">
                     <h3>The Beatles</h3>
                     <h4>Sgt. Pepper's Lonely Hearts Club Band</h4>
@@ -155,7 +155,7 @@
         </div>
         <div class="contenedor__fotos">
             <figure>
-                <img src="../Multimedia/Strokes.jpg" alt="img9">
+                <img src="/Multimedia/Strokes.jpg" alt="img9">
                 <div class="capa">
                     <h3>The Strokes</h3>
                     <h4>Is This It?</h4>
@@ -165,7 +165,7 @@
         </div>
         <div class="contenedor__fotos">
             <figure>
-            <img src="../Multimedia/Wall.jpg" alt="img10">
+            <img src="/Multimedia/Wall.jpg" alt="img10">
                 <div class="capa">
                     <h3>Pink Floyd</h3>
                     <h4>The Wall</h4>
