--- a/pages/Ayuda.html
+++ b/pages/Ayuda.html
@@ -49,7 +49,7 @@
                 <i class="remove"><ion-icon name="remove"></ion-icon></i>
                 </a>
                 <div class="respuesta">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus et accusantium quasi perspiciatis aut, officiis quos vitae ea, itaque officia natus, earum iste dignissimos voluptate deleniti dolor? Sint, fuga nostrum!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore earum repudiandae quidem facere sed quas explicabo nihil! Atque minima inventore velit nam perferendis eaque tempore at dolore, suscipit error minus!</p>
                 </div>
             </div>
             <div class="acordion__item" id="pregunta2">
@@ -59,7 +59,7 @@
                     <i class="remove"><ion-icon name="remove"></ion-icon></i>
                 </a>
                 <div class="respuesta">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus et accusantium quasi perspiciatis aut, officiis quos vitae ea, itaque officia natus, earum iste dignissimos voluptate deleniti dolor? Sint, fuga nostrum!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam, minus? Harum ipsa beatae voluptates aliquam quae eveniet dolore corporis quia nesciunt quo. Iusto, enim. Quis magni facere nihil error voluptate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus et accusantium quasi perspiciatis aut, officiis quos vitae ea, itaque officia natus, earum iste dignissimos voluptate deleniti dolor? Sint, fuga nostrum!</p>
                 </div>
             </div>
             <div class="acordion__item" id="pregunta3">
@@ -69,7 +69,7 @@
                     <i class="remove"><ion-icon name="remove"></ion-icon></i>
                 </a>
                 <div class="respuesta">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus et accusantium quasi perspiciatis aut, officiis quos vitae ea, itaque officia natus, earum iste dignissimos voluptate deleniti dolor? Sint, fuga nostrum!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam officiis voluptatibus, nemo repellat quas corrupti reprehenderit ea, odio officia inventore doloribus esse voluptatum libero, praesentium provident architecto alias nulla deleniti. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus perspiciatis sint distinctio perferendis eaque, cumque itaque odit velit expedita impedit deserunt magnam, vero aperiam doloremque earum repellat. Debitis, possimus sunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus et accusantium quasi perspiciatis aut, officiis quos vitae ea, itaque officia natus, earum iste dignissimos voluptate deleniti dolor? Sint, fuga nostrum!</p>
                 </div>
             </div>
             <div class="acordion__item" id="pregunta4">
@@ -79,7 +79,7 @@
                     <i class="remove"><ion-icon name="remove"></ion-icon></i>
                 </a>
                 <div class="respuesta">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus et accusantium quasi perspiciatis aut, officiis quos vitae ea, itaque officia natus, earum iste dignissimos voluptate deleniti dolor? Sint, fuga nostrum!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, labore assumenda. Eveniet modi assumenda vitae. Minima iste error molestias in. Hic eveniet accusantium quo saepe aperiam et sequi, ipsum dolorum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus et accusantium quasi perspiciatis aut, officiis quos vitae ea, itaque officia natus, earum iste dignissimos voluptate deleniti dolor? Sint, fuga nostrum!</p>
                 </div>
             </div>
         </div>
