--- a/pages/Vinilos.html
+++ b/pages/Vinilos.html
@@ -42,7 +42,7 @@
         <h1 class="titulo__roto">Nuestros productos</h1>
         <h1><b>Nuestros Productos</b></h1>
         <article class="ContenedorProductos">
-            <section class="FotosProductos">
+            <section class="Fotos__Productos">
                 <div class="contenedor__fotos">
                     <figure>
                         <img src="../Multimedia/Clash.jpg" alt="img1">
@@ -52,6 +52,9 @@
                                 <p class="texto__imagenes">London Calling es el tercer álbum de estudio de la banda británica de punk The Clash, lanzado el 14 de diciembre de 1979, por CBS Records en el Reino Unido y en enero de 1980 por Epic Records en Estados Unidos.</p>
                             </div>
                     </figure>
+                    <div class="Agregar__carrito">
+                        <button><p>Agregar al carrito</p></button>
+                    </div>
                 </div>
                 <div class="contenedor__fotos">
                     <figure>
@@ -62,6 +65,9 @@
                             <p class="texto__imagenes">In the Court of the Crimson King es el álbum debut del grupo inglés King Crimson, ​ producido y publicado en 1969, considerado uno de los primeros álbumes de rock progresivo.​​​El álbum se destaca por la combinación de las letras y la instrumentación.</p>
                         </div>
                     </figure>
+                    <div class="Agregar__carrito">
+                        <button><p>Agregar al carrito</p></button>
+                    </div>
                 </div>
                 <div class="contenedor__fotos">
                     <figure>
@@ -72,6 +78,9 @@
                             <p class="texto__imagenes">Kiss Me, Kiss Me, Kiss Me es el séptimo álbum de estudio de la banda inglesa de rock alternativo, The Cure liderada por Robert Smith. Fue producido por Dave Allen y por el mismo Smith, y lanzado al mercado el 5 de mayo de 1987 inicialmente en formato de disco doble vinilo.</p>
                         </div>
                     </figure>
+                    <div class="Agregar__carrito">
+                        <button><p>Agregar al carrito</p></button>
+                    </div>
                 </div>
                 <div class="contenedor__fotos">
                     <figure>
@@ -82,6 +91,9 @@
                             <p class="texto__imagenes">After Chabón es el tercer y último disco de la banda argentina de rock Sumo. Fue editado en 1987. Para Luca Prodan este fue el mejor disco de la banda ya que no contiene ningún hit único. La idea de tapa fue de Roberto Pettinato</p>
                         </div>
                     </figure>
+                    <div class="Agregar__carrito">
+                        <button><p>Agregar al carrito</p></button>
+                    </div>
                 </div>
                 <div class="contenedor__fotos">
                     <figure>
@@ -92,6 +104,9 @@
                             <p class="texto__imagenes">Unknown Pleasures es el primer álbum de estudio de la banda británica Joy Division, publicado en junio de 1979. La imagen de la portada muestra 80 pulsos sucesivos del primer púlsar descubierto.</p>
                         </div>
                     </figure>
+                    <div class="Agregar__carrito">
+                        <button><p>Agregar al carrito</p></button>
+                    </div>
                 </div>
                 <div class="contenedor__fotos">
                     <figure>
@@ -102,6 +117,9 @@
                             <p class="texto__imagenes">The Dark Side of the Moon es un álbum conceptual, el octavo de estudio de la banda británica de rock progresivo Pink Floyd. Fue lanzado el 1 de marzo de 1973 en los Estados Unidos y el 24 de marzo del mismo año en el Reino Unido.</p>
                         </div>
                     </figure>
+                    <div class="Agregar__carrito">
+                        <button><p>Agregar al carrito</p></button>
+                    </div>
                 </div>
                 <div class="contenedor__fotos">
                     <figure>
@@ -112,6 +130,9 @@
                             <p class="texto__imagenes">Power, Corruption & Lies es el segundo álbum de estudio de la banda New Order. Fue publicado el 2 de mayo de 1983. El álbum cuenta con más pistas basadas en sonidos electrónicos que su anterior álbum Movement, con un mayor uso de los sintetizadores</p>
                         </div>
                     </figure>
+                    <div class="Agregar__carrito">
+                        <button><p>Agregar al carrito</p></button>
+                    </div>
                 </div>
                 <div class="contenedor__fotos">
                     <figure>
@@ -122,6 +143,9 @@
                             <p class="texto__imagenes">Sgt. Pepper's Lonely Hearts Club Band es el octavo álbum de estudio de la banda Inglesa The Beatles. Fue publicado el 26 de mayo de 1967. Alabado por los criticos debido a su innovación en la creacion de letras, produccion y diseño grafico.</p>
                         </div>
                     </figure>
+                    <div class="Agregar__carrito">
+                        <button><p>Agregar al carrito</p></button>
+                    </div>
                 </div>
                 <div class="contenedor__fotos">
                     <figure>
@@ -132,6 +156,9 @@
                             <p class="texto__imagenes">Is This It es el álbum debut de la banda de rock estadounidense The Strokes. Grabado en el estudio Transporterraum de Nueva York con el productor Gordon Raphael, el álbum se publicó por primera vez el 30 de julio de 2001 en Australia, con RCA Records como compañía discográfica.</p>
                         </div>
                     </figure>
+                    <div class="Agregar__carrito">
+                        <button><p>Agregar al carrito</p></button>
+                    </div>
                 </div>
                 <div class="contenedor__fotos">
                     <figure>
@@ -142,6 +169,9 @@
                             <p class="texto__imagenes">The Wall es el undécimo álbum de estudio de la banda británica de rock progresivo Pink Floyd y el segundo doble, publicado en 1979. Se grabó entre abril y noviembre bajo la dirección del productor Bob Ezrin y de los miembros de Pink Floyd David Gilmour y Roger Waters.</p>
                         </div>
                     </figure>
+                    <div class="Agregar__carrito">
+                        <button><p>Agregar al carrito</p></button>
+                    </div>
                 </div>
             </section>
         
