--- a/pages/Vinilos.html
+++ b/pages/Vinilos.html
@@ -38,6 +38,11 @@
             </nav>
         </nav>
     </header>
+    <div class="container__slider">
+                <img src="../Multimedia/Banner_novedades-1425x0.jpg">          
+            </li>
+        </ul>
+        </div>
     <div class="ListadoProductos">
         <h1 class="titulo__roto">Nuestros productos</h1>
         <h1><b>Nuestros Productos</b></h1>
